src/test/deca/context/invalid/provided/BadMethodName.deca
// Description : Déclaration d'une méthode avec un nom déjà utilisé
// Resultat : BadMethodName.deca:7:5: Identifier already used ! (2.6)

class A {
	void set(){
}
	int set(){
}
}
